--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.9.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jquery": "^3.6.3",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "roughjs": "^4.5.2",
     "serve": "^14.0.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
