--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "serve": "^14.0.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
